# hacktoberfest--2025

./: .env.example  .gitignore  CSV_IMPLEMENTATION_COMPLETE.md  Contributing.md  FEATURE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PERFORMANCE_METRICS_SUMMARY.md  README.md
NextJS/hackboard/: package-lock.json  package.json
NextJS/hackboard/src/app/: error.tsx  layout.tsx  not-found.tsx  page.tsx
NextJS/hackboard/src/components/: footer.tsx  leaderboard-new.tsx  leaderboard.tsx
NextJS/hackboard/src/components/ui/: skeleton.tsx  table.tsx
Python/: ACHIEVEMENT_BADGES_SYSTEM.md  NOTIFICATION_SYSTEM.md  WEB_UI_IMPLEMENTATION.md  badge_system_demo.py  demo.py  notification_demo.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_metrics.json  test_metrics.py
Python/docs/: API.md  CSV_IMPORT_EXPORT.md  EMAIL_NOTIFICATIONS.md  PERFORMANCE_METRICS.md  SEARCH_FILTER.md
Python/examples/: advanced_usage.py  basic_usage.py  email_notifications_example.py
Python/src/: desktop_ui.py  main.py  menu_system.py  run_web_ui.py  test_contributors.json  test_search.py  welcomescript.py
Python/src/Contribute_Checker/: __init__.py  backup_engine.py  contributor.py  csv_handler.py  email_notifier.py  metrics_visualizer.py  notification_system.py  performance_metrics.py  project_tracker.py  repo_statistics.py  search_engine.py
Python/src/web_ui/: README.md  app.py
Python/src/web_ui/static/css/: style.css
Python/src/web_ui/static/js/: app.js
Python/src/web_ui/templates/: achievement_badges.html  add_contribution.html  add_contributor.html  badge_widget.html  base.html  contributor_detail.html  contributors.html  index.html  leaderboard.html  notification_widget.html  notifications.html
